...
    <fragment
        android:id="@+id/browseChoiceFragment"
        android:name="com.example.app_mythology.ui.browse.BrowseChoiceFragment"
        android:label="Parcourir"
        tools:layout="@layout/fragment_browse_choice">
        <action android:id="@+id/action_browseChoice_to_entityList"
            app:destination="@id/entityListFragment" />
        <action android:id="@+id/action_browseChoice_to_placeList"
            app:destination="@id/placeListFragment" />
        <action android:id="@+id/action_browseChoice_to_artifactList"
            app:destination="@id/artifactListFragment" />
    </fragment>

    <fragment
        android:id="@+id/entityListFragment"
        android:name="com.example.app_mythology.ui.browse.EntityListFragment"
        android:label="Entités"
        tools:layout="@layout/fragment_entity_list">
        <action android:id="@+id/action_entityList_to_entityDetail"
            app:destination="@id/entityDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/entityDetailFragment"
        android:name="com.example.app_mythology.ui.browse.EntityDetailFragment"
        android:label="Détail"
...
